// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with expand 1`] = `
.c5 {
  position: relative;
  display: inline-block;
  width: 14px;
  height: 14px;
  vertical-align: middle;
  text-align: center;
  line-height: 13px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c6 {
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  border-radius: 3px;
  box-sizing: border-box;
  border: 1px solid #b8bec3;
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c6 .c7 {
  color: #b8bec3;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  left: 50%;
}

.c6 .c10 {
  color: #b8bec3;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  left: 50%;
}

.c0 {
  box-sizing: border-box;
  background-color: white;
  width: 26px;
  min-width: 26px;
}

.c4 {
  visibility: hidden;
}

.c1 {
  box-sizing: border-box;
  background-color: white;
  white-space: nowrap;
  min-width: 200px;
  max-width: 400px;
  font-size: 13px;
  line-height: 17px;
  padding-left: 0px;
  border-bottom: 1px solid #f0f2f3;
  padding-top: 8px;
  padding-bottom: 8px;
}

.c1 .c3 {
  margin-right: 10px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c8 {
  display: inline-block;
  white-space: nowrap;
}

.c9 {
  margin-left: 10px;
}

<table>
  <tbody>
    <tr>
      <td
        class="c0"
      />
      <td
        class="c1"
        colspan="3"
      >
        <div
          class="c2"
        >
          <div
            class="c3 c4"
          >
            <div
              class="c5"
            >
              <div
                class="c6"
              >
                <span
                  class="BaseIcon IconPlus c7 "
                  data-lego="react"
                >
                  <svg
                    fill="currentColor"
                    height="7px"
                    viewBox="0 0 8 8"
                    width="7px"
                  >
                    <path
                      d="M4.696 3.335h3.333v1.333H4.696v3.334H3.363V4.668H.029V3.335h3.334V.002h1.333z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </div>
          <div
            class="c8"
          >
            <button
              autocomplete="off"
              class="control button2 button2_view_classic button2_size_s button2_theme_action"
              data-lego="react"
              type="button"
            >
              <span
                class="button2__text"
                data-lego="react"
              >
                Показать ещё
              </span>
            </button>
            <span
              class="c9"
            >
              Показано 15 из 30 строк
            </span>
          </div>
        </div>
      </td>
      <td
        class="c0"
      />
    </tr>
  </tbody>
</table>
`;

exports[`without expand 1`] = `
.c0 {
  box-sizing: border-box;
  background-color: white;
  width: 26px;
  min-width: 26px;
}

.c1 {
  box-sizing: border-box;
  background-color: white;
  white-space: nowrap;
  min-width: 200px;
  max-width: 400px;
  font-size: 13px;
  line-height: 17px;
  padding-left: 0px;
  border-bottom: 1px solid #f0f2f3;
  padding-top: 8px;
  padding-bottom: 8px;
}

.c1 .c5 {
  margin-right: 10px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 {
  display: inline-block;
  white-space: nowrap;
}

.c4 {
  margin-left: 10px;
}

<table>
  <tbody>
    <tr>
      <td
        class="c0"
      />
      <td
        class="c1"
        colspan="3"
      >
        <div
          class="c2"
        >
          <div
            class="c3"
          >
            <button
              autocomplete="off"
              class="control button2 button2_view_classic button2_size_s button2_theme_action"
              data-lego="react"
              type="button"
            >
              <span
                class="button2__text"
                data-lego="react"
              >
                Показать ещё
              </span>
            </button>
            <span
              class="c4"
            >
              Показано 15 из 30 строк
            </span>
          </div>
        </div>
      </td>
      <td
        class="c0"
      />
    </tr>
  </tbody>
</table>
`;
